extensions/kubernetes-dashboard/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kubernetes-dashboard.k3s-cluster.io`)
      kind: Rule
      services:
        - name: kubernetes-dashboard
          kind: Service
          namespace: kubernetes-dashboard
          port: 443
          serversTransport: k8s-dashboard-transport
  tls:
    secretName: k3s-cluster-tls
